--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 31
+    namespace 'com.example.cupcake'
+    compileSdkVersion 34
 
     defaultConfig {
         applicationId "com.example.cupcake"
-        minSdkVersion 19
-        targetSdkVersion 31
+        minSdkVersion 21
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
@@ -18,6 +19,17 @@ android {
 
     buildFeatures {
         dataBinding true
+        compose true
+    }
+    composeOptions {
+//        kotlinCompilerExtensionVersion = "1.5.14"
+
+        kotlinCompilerExtensionVersion compose_version
+        kotlinCompilerVersion '1.7.10'
+    }
+
+    kotlinOptions {
+        jvmTarget = "19"
     }
 
     buildTypes {
@@ -38,16 +50,27 @@ android {
 }
 
 dependencies {
-    def nav_version = "2.4.1"
-    def lifecycle_version = "2.4.1"
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "androidx.compose.ui:ui:1.6.8"
+    implementation "androidx.compose.material:material:1.6.8"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.8.3"
+    implementation "androidx.activity:activity-compose:1.9.0"
+
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    def nav_version = "2.7.7"
+    def lifecycle_version = "2.5.1"
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.core:core-ktx:1.13.1'
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.12.0'
+
+
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
