--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,13 +48,15 @@ android {
         jvmTarget = '1.8'
     }
 }
-
+def nav_compose_version = "2.6.0-alpha04"
 dependencies {
     implementation "androidx.compose.ui:ui:1.6.8"
     implementation "androidx.compose.material:material:1.6.8"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.8.3"
     implementation "androidx.activity:activity-compose:1.9.0"
+
+    implementation "androidx.navigation:navigation-compose:$nav_compose_version"
 
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
