--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     implementation "androidx.activity:activity-compose:1.9.0"
 
     implementation "androidx.navigation:navigation-compose:$nav_compose_version"
+    implementation "androidx.navigation:navigation-compose:2.8.0-beta05"
+    implementation "androidx.compose.animation:animation:1.6.8"
 
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
@@ -73,7 +75,6 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation 'com.google.android.material:material:1.12.0'
-
 
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
